update Grafana configuration and rendering settings in compose file

--- a/compose.yml
+++ b/compose.yml
@@ -4,7 +4,7 @@ services:
     image: grafana/grafana:latest
     restart: unless-stopped
     ports:
-      - "127.0.0.1:3000:3000"
+      - "3000:3000"
     depends_on:
       - questdb
     networks:
@@ -12,7 +12,18 @@ services:
     volumes:
       - grafana-storage:/var/lib/grafana
     environment:
-      - GF_INSTALL_PLUGINS=https://github.com/performancecopilot/grafana-pcp/releases/download/v5.1.1/performancecopilot-pcp-app-5.1.1.zip;performancecopilot-pcp-app
+      - GF_RENDERING_SERVER_URL=http://renderer:8081/render
+      - GF_RENDERING_CALLBACK_URL=http://grafana:3000/
+      - GF_RENDERING_TOKEN=0505e1a5b1847cde53b25f3892335950
+
+  renderer:
+    container_name: renderer
+    image: grafana/grafana-image-renderer:latest
+    restart: unless-stopped
+    networks:
+      - grafana
+    environment:
+     - RENDERING_AUTH_TOKEN=0505e1a5b1847cde53b25f3892335950
 
   questdb:
       container_name: questdb
